# Financial-AI-App

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
Notes/: ClaudeWork_1.md  ClaudeWork_2.md  Prompt1.txt  diagrams.md
openspec/: agents.yaml  architecture.yaml  data_models.yaml  fluid_requirements.yaml  guardrails.yaml  gui.yaml  mcp.yaml  project.yaml  requirements.yaml
src/finapp/: config.py
src/finapp/app/agents/: base_agent.py  financial_planner_agent.py  market_researcher_agent.py  news_sentinel_agent.py  orchestrator_agent.py  portfolio_advisor_agent.py  risk_analyst_agent.py  trade_reviewer_agent.py
src/finapp/app/services/: market_data_service.py  news_service.py  portfolio_service.py  risk_service.py
src/finapp/domain/calculators/: performance_calculator.py  risk_calculator.py
src/finapp/domain/models/: account.py  goal.py  holding.py  market.py  portfolio.py  transaction.py  watchlist.py
src/finapp/domain/repositories/: interfaces.py
src/finapp/gui/: main.py
src/finapp/gui/components/: shared.py
src/finapp/gui/pages/: ai_advisor.py  dashboard.py  market.py  news.py  portfolio.py  risk.py  settings.py
src/finapp/infrastructure/: database.py  orm_models.py
src/finapp/infrastructure/cache/: market_data_cache.py
src/finapp/infrastructure/repositories/: portfolio_repository.py
src/finapp/mcp_servers/: calculator_server.py  export_server.py  market_data_server.py  news_server.py  portfolio_server.py  search_server.py
tests/: conftest.py
tests/domain/: test_domain_models.py  test_performance_calculator.py  test_risk_calculator.py
